all protocols can be initialized, constructors are valid